Initial project upload

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,34 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1"
-    />
-    <title>EAGLE Lens - AI-Powered Satellite Change Detection</title>
-    <meta
-      name="description"
-      content="Analyze vegetation changes, deforestation, and urban development using AI-powered satellite imagery and NDVI analysis. Monitor environmental changes in Mangalore with EAGLE Lens."
-    />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="utf-8" />
+    <title>EAGLE Lens</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/styles.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""
     />
   </head>
-  <body class="dark">
+  <body>
     <div id="root"></div>
-
-    <!-- ✅ Fixed: load main.jsx instead of main.tsx -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
